--- a/src/modules/new-account/components/account-deposit/account-deposit.styles.less
+++ b/src/modules/new-account/components/account-deposit/account-deposit.styles.less
@@ -1,8 +1,9 @@
 @import (reference) '~assets/styles/shared';
 
 .AccountDeposit {
-  padding: 90px 120px 230px 0;
-
+  background: white;
+  padding: 5.625rem 0 0 4.375rem;
+  width: 100%;
 }
 
 .AccountDeposit__heading {
@@ -12,25 +13,142 @@
   h1 {
     color: @color-darkpurple;
     font-size: 1.875rem;
+    font-weight: 500;
+    letter-spacing: 0.14rem;
+    margin-right: 1rem;
+    text-transform: uppercase;
+  }
+  
+  > * {
+    display: inline-block;
   }
 }
 
+.AccountDeposit__main {
+  display: flex;
+  width: 100%;
+}
+
 .AccountDeposit__description {
-  border-left: 1px solid @color-gray;
-  width: 26.25rem;
+  border-right: 1px solid @color-lightergray;
+  flex: 0 26.25rem;
   
   p {
     font-size: 1.125rem;
-    margin-bottom: 1.5rem;
+    margin: 0 0 1.5rem;
   }
 
   a {
     color: @color-purple;
     font-size: 1.125rem;
+    font-weight: 500;
     text-transform: uppercase;
   }
 }
 
 .AccountDeposit__form {
-  width: 35.9rem;
+  flex: 1;
+  margin-left: 3.75rem;
+  max-width: 36rem;
+}
+
+.AccountDeposit__formTopRow {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1.5rem;
+
+  > * {
+    width: 40%;
+  }
+}
+
+.AccountDeposit__formBottomRow {
+  margin-bottom: 1.5rem;
+}
+
+.AccountDeposit__inputContain {
+  label {
+    color: @color-darkpurple;
+    font-weight: 500;
+  }
+}
+
+.AccountDeposit__submitButton {
+  background: @color-purple;
+  border-radius: 0.1875rem;
+  color: @color-white;
+  float: right;
+  font-size: 1.125rem;
+  font-weight: 500;
+  height: 2.625rem;
+  line-height: 2.625rem;
+  padding: 0 2rem;
+  text-transform: uppercase;
+}
+
+@media @breakpoint-mobile {
+  .AccountDeposit {
+    padding: 3.125rem 0 0;
+  }
+
+  .AccountDeposit__heading {
+    font-size: 1.5rem;
+    letter-spacing: 0.11rem;
+    margin-bottom: 0.5rem;
+    padding: 0 1rem;
+
+    h1 {
+      margin-right: 0.5rem;
+    }
+  }
+
+  .AccountDeposit__main {
+    display: block;
+  }
+
+  .AccountDeposit__description {
+    border: none;
+    margin-bottom: 2rem;
+    padding: 0 1rem;
+
+    p {
+      font-size: 1rem;
+      margin-bottom: 1rem;
+    }
+
+    a {
+      font-size: 1.125rem;
+    }
+  }
+
+  .AccountDeposit__form {
+    margin: 0;
+    max-width: auto;
+  }
+
+  .AccountDeposit__formTopRow {
+    display: block;
+
+    > * {
+      width: auto;
+    }
+  }
+
+  .AccountDeposit__formTopRow,
+  .AccountDeposit__formBottomRow {
+    margin: 0;
+  }
+
+  .AccountDeposit__inputContain {
+    width: 100%;
+    margin-bottom: 1.5rem;
+    padding: 0 1rem;
+  }
+
+  .AccountDeposit__submitButton {
+    border-radius: 0;
+    float: none;
+    margin-top: 2.25rem;
+    width: 100%;
+  }
 }
